@@ -1,5 +1,9 @@
 2017-01-28  Allen D. Ball  <ball@sol.local>
 
+	* src/main/java/ball/http/ant/taskdefs/HTTPTask.java:
+	Support "buffer" attribute.  Set Task attributes from Project
+	Properties in init().
+
 	* build.xml: Added "http-delete" and "http-put" targets.
 
 2016-09-21  Allen D. Ball  <ball@sol.local>
